# NetworkProgram

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/src/: App.cpp  App.h  ChatWindow.cpp  ChatWindow.h  ConnectServerWindow.cpp  ConnectServerWindow.h
client/ui/: ChatWindow.ui  ConnectServerWindow.ui
server/: .gitignore  CMakeLists.txt  main.cpp
